mall-deployment/kubernetes/platform/deployment/services/rabbitmq.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mall-rabbitmq
  labels:
    db: mall-rabbitmq
spec:
  selector:
    matchLabels:
      db: mall-rabbitmq
  template:
    metadata:
      labels:
        db: mall-rabbitmq
    spec:
      containers:
        - name: mall-rabbitmq
          image: rabbitmq:3.13-management
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 150Mi
          volumeMounts:
            - mountPath: /etc/rabbitmq
              name: rabbitmq-config-volume
      volumes:
        - name: rabbitmq-config-volume
          configMap:
            name: rabbitmq-config

---

apiVersion: v1
kind: Service
metadata:
  name: mall-rabbitmq
  labels:
    db: mall-rabbitmq
spec:
  type: ClusterIP
  selector:
    db: mall-rabbitmq
  ports:
    - name: amqp
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: management
      protocol: TCP
      port: 15672
      targetPort: 15672
