mall-deployment/kubernetes/platform/deployment/services/redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mall-redis
  labels:
    db: mall-redis
spec:
  selector:
    matchLabels:
      db: mall-redis
  template:
    metadata:
      labels:
        db: mall-redis
    spec:
      containers:
        - name: mall-redis
          image: redis:latest
          resources:
            requests:
              cpu: 100m
              memory: 50Mi
            limits:
              cpu: 200m
              memory: 100Mi

---

apiVersion: v1
kind: Service
metadata:
  name: mall-redis
  labels:
    db: mall-redis
spec:
  type: ClusterIP
  selector:
    db: mall-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
