mall-deployment/kubernetes/platform/deployment/services/keycloak.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mall-keycloak
  labels:
    app: mall-keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mall-keycloak
  template:
    metadata:
      labels:
        app: mall-keycloak
    spec:
      containers:
        - name: mall-keycloak
          image: quay.io/keycloak/keycloak:25.0.0
          args:
            - "start-dev"
            - "--import-realm"
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet:
              path: /realms/master
              port: 8080
            failureThreshold: 40
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /realms/master
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 350Mi
            limits:
              cpu: 500m
              memory: 750Mi
          volumeMounts:
            - mountPath: /opt/keycloak/data/import
              name: mall-keycloak-conf-volume
      volumes:
        - name: mall-keycloak-conf-volume
          configMap:
            name: mall-keycloak

---

apiVersion: v1
kind: Service
metadata:
  name: mall-keycloak
  labels:
    app: mall-keycloak
spec:
  type: ClusterIP
  selector:
    app: mall-keycloak
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  labels:
    app: mall-keycloak
spec:
  rules:
    - host: mall-keycloak
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mall-keycloak
                port:
                  number: 80
